Fixes bug #344: Corrected print layout for both, with and without denkbares skin: * Removed blue lines on left border and title in print-out * Showing complete titles of default-markup sections (not collapsed) * Hiding tool menu if expanded (default markup and tables)

--- a/KnowWE/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/defaultMarkup.css
+++ b/KnowWE/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/defaultMarkup.css
@@ -137,3 +137,24 @@
 span.markupMenuItem {
 	padding: 0 !important;
 }
+
+/*
+ * make sure that in print-out all titles are visible, 
+ * but no menus
+ */
+@media print {
+	.defaultMarkupFrame .markupMenu {
+		opacity: 0 !important;
+	}
+	.defaultMarkupFrame .headerMenu {
+		max-width: 250px !important;
+		border-width: 0px !important;
+	}
+	.defaultMarkupFrame .headerMenu .markupHeader {
+		padding: 3px 0px 0px 0px !important;
+	}
+	.defaultMarkupFrame .markupMenuIndicator {
+		padding-right: 0px;
+		visibility: hidden;
+	}
+}
