--- a/KnowWE/KnowWE-Plugin-InstantEdit/src/main/resources/webapp/KnowWEExtension/css/table-edit-tool.css
+++ b/KnowWE/KnowWE-Plugin-InstantEdit/src/main/resources/webapp/KnowWEExtension/css/table-edit-tool.css
@@ -92,3 +92,13 @@ div.cellEdit {
 	position: absolute;
 	z-index: 10;
 }
+
+/*
+ * make sure that edit-menu is not visible in printed mode
+ */
+@media print {
+	.tablePopupIcon * {
+		visibility: hidden !important;
+	}
+}
+
